--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "babel-plugin-styled-components": "^1.13.3",
     "gatsby": "^4.1.3",
+    "gatsby-plugin-mdx": "^3.1.3",
+    "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-styled-components": "^5.1.0",
+    "gatsby-source-filesystem": "^4.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "styled-components": "^5.3.3"
   }
 }
