--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mdx-js/react": "^1.6.22",
     "babel-plugin-styled-components": "^1.13.3",
     "gatsby": "^4.1.3",
+    "gatsby-plugin-image": "^2.1.2",
     "gatsby-plugin-mdx": "^3.1.3",
     "gatsby-plugin-react-helmet": "^5.1.0",
+    "gatsby-plugin-sharp": "^4.1.3",
     "gatsby-plugin-styled-components": "^5.1.0",
     "gatsby-source-filesystem": "^4.1.2",
     "react": "^17.0.1",
