--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gatsby-plugin-sharp": "^4.1.3",
     "gatsby-plugin-styled-components": "^5.1.0",
     "gatsby-source-filesystem": "^4.1.2",
+    "prism-react-renderer": "^1.2.1",
+    "prismjs": "^1.25.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
