--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "babel-plugin-styled-components": "^1.13.3",
     "gatsby": "^4.1.3",
     "gatsby-plugin-image": "^2.1.2",
+    "gatsby-plugin-lodash": "^5.2.0",
     "gatsby-plugin-mdx": "^3.1.3",
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-sharp": "^4.1.3",
     "gatsby-plugin-styled-components": "^5.1.0",
     "gatsby-source-filesystem": "^4.1.2",
     "gatsby-transformer-sharp": "^4.1.0",
+    "lodash": "^4.17.21",
     "prism-react-renderer": "^1.2.1",
     "prismjs": "^1.25.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.3.3"
-  }
+  },
+  "devDependencies": {}
 }
