--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/react": "^1.6.22",
     "babel-plugin-styled-components": "^1.13.3",
     "gatsby": "^4.1.3",
+    "gatsby-plugin-google-gtag": "^4.8.0",
     "gatsby-plugin-image": "^2.1.2",
     "gatsby-plugin-lodash": "^5.2.0",
     "gatsby-plugin-mdx": "^3.1.3",
